Переработан Парсер + немного понятности в интерфейсе