@@ -2,8 +2,14 @@ package macrosnik.ui;
 
 import javafx.beans.property.SimpleStringProperty;
 import javafx.beans.property.StringProperty;
-import macrosnik.domain.*;
+import macrosnik.domain.Action;
+import macrosnik.domain.CoordinateMode;
+import macrosnik.domain.DelayAction;
+import macrosnik.domain.KeyAction;
+import macrosnik.domain.MouseButtonAction;
+import macrosnik.domain.MouseMovePathAction;
 import macrosnik.domain.MouseMovePathAction.PathPoint;
+import macrosnik.domain.TextInputAction;
 import macrosnik.domain.enums.KeyActionType;
 import macrosnik.domain.enums.MouseButton;
 import macrosnik.domain.enums.MouseButtonActionType;
@@ -24,13 +30,18 @@ public class MacroTableRow {
             row.details.set("Ожидание " + delayAction.durationMs + " мс");
         } else if (action instanceof MouseMovePathAction mouseMovePathAction) {
             int n = mouseMovePathAction.points.size();
-            String first = n > 0 ? fmt(mouseMovePathAction.points.get(0)) : "-";
-            String last = n > 0 ? fmt(mouseMovePathAction.points.get(n - 1)) : "-";
-            row.details.set("Точек: " + n
-                    + ", от " + first
-                    + " до " + last
-                    + ", время: " + totalPathDuration(mouseMovePathAction) + " мс"
-                    + ", режим: " + modeName(mouseMovePathAction.coordinateMode));
+            if (n == 1) {
+                row.details.set("Точка: " + fmt(mouseMovePathAction.points.getFirst())
+                        + ", режим: " + modeName(mouseMovePathAction.coordinateMode));
+            } else {
+                String first = n > 0 ? fmt(mouseMovePathAction.points.get(0)) : "-";
+                String last = n > 0 ? fmt(mouseMovePathAction.points.get(n - 1)) : "-";
+                row.details.set("Точек: " + n
+                        + ", от " + first
+                        + " до " + last
+                        + ", время: " + totalPathDuration(mouseMovePathAction) + " мс"
+                        + ", режим: " + modeName(mouseMovePathAction.coordinateMode));
+            }
         } else if (action instanceof MouseButtonAction mouseButtonAction) {
             row.details.set(mouseButtonName(mouseButtonAction.button) + ", действие: " + mouseActionName(mouseButtonAction.action));
         } else if (action instanceof KeyAction keyAction) {
@@ -53,7 +64,11 @@ public class MacroTableRow {
     }
 
     private static String keyActionName(KeyActionType actionType) {
-        return actionType == KeyActionType.DOWN ? "нажатие" : "отпускание";
+        return switch (actionType) {
+            case DOWN -> "нажатие";
+            case UP -> "отпускание";
+            case CLICK -> "нажатие";
+        };
     }
 
     private static String mouseButtonName(MouseButton button) {
